[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Backgrounds/menuscreen.png" type="Texture" id=1]
[ext_resource path="res://Assets/wildwordsroman.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://MainMenu-Font.tres" type="Theme" id=3]
[ext_resource path="res://MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Button.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 86
font_data = ExtResource( 2 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 596, 322 )
texture = ExtResource( 1 )

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_right = 1366.0
margin_bottom = 768.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
margin_left = 154.0
margin_top = 177.0
margin_right = 1212.0
margin_bottom = 591.0

[node name="Label" type="Label" parent="CenterContainer2/VBoxContainer"]
margin_right = 1058.0
margin_bottom = 90.0
theme = ExtResource( 3 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_fonts/font = SubResource( 1 )
text = "Chasing Connections"
align = 1
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer2/VBoxContainer"]
margin_top = 94.0
margin_right = 1058.0
margin_bottom = 396.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2/VBoxContainer/CenterContainer"]
margin_left = 397.0
margin_right = 661.0
margin_bottom = 302.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Play" parent="CenterContainer2/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 6 )]

[node name="Label" parent="CenterContainer2/VBoxContainer/CenterContainer/VBoxContainer/Play" index="0"]
text = "Play"

[node name="Level Select" parent="CenterContainer2/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 102.0
margin_bottom = 200.0

[node name="Label" parent="CenterContainer2/VBoxContainer/CenterContainer/VBoxContainer/Level Select" index="0"]
text = "Level Select"

[node name="Quit" parent="CenterContainer2/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 204.0
margin_bottom = 302.0

[node name="Label" parent="CenterContainer2/VBoxContainer/CenterContainer/VBoxContainer/Quit" index="0"]
text = "Quit"

[node name="Label2" type="Label" parent="CenterContainer2/VBoxContainer"]
margin_top = 400.0
margin_right = 1058.0
margin_bottom = 414.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "By the Render Bros, using animations from Mixamo.com"
align = 1

[connection signal="pressed" from="CenterContainer2/VBoxContainer/CenterContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CenterContainer2/VBoxContainer/CenterContainer/VBoxContainer/Level Select" to="." method="_on_Level_Select_pressed"]
[connection signal="pressed" from="CenterContainer2/VBoxContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]

[editable path="CenterContainer2/VBoxContainer/CenterContainer/VBoxContainer/Play"]
[editable path="CenterContainer2/VBoxContainer/CenterContainer/VBoxContainer/Level Select"]
[editable path="CenterContainer2/VBoxContainer/CenterContainer/VBoxContainer/Quit"]
